Vertically Aligned Answer Options, fixed form controls

--- a/src/components/pages/quiz/question.css
+++ b/src/components/pages/quiz/question.css
@@ -2,20 +2,18 @@
   margin-top: 30px;
   margin-bottom: 30px;
   background-color: white;
+  padding: 30px;
+  border: 1px solid black;
 }
 .question-title {
   font-weight: 500;
-  text-align: center;
   font-size: 22px;
   padding: 20px;
 }
 .answer-choices {
   list-style-type: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .quiz-option {
-  margin: 50px;
+  margin: 20px;
 }
